[workspace]
members = ["vhpi-sys", "vhpi", "dumper", "tests/test_simple"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickg/rust-vhpi"
rust-version = "1.82"

[workspace.dependencies]
vhpi = {path = "vhpi"}
vhpi-sys = {path = "vhpi-sys"}
bindgen = "0.72"
bitflags = "2.11"
num-derive = "0.4"
num-traits = "0.2"
